[package]
name = "schnorrkel"
version = "0.1.0"
authors = ["Aki Wu <wuminzhe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schnorrkel = "0.10.1"
hex = "0.4.3"
libc = "0.2.90"
hex-literal = "0.3.1"

[lib]
crate-type=["dylib"]